Summary: | ASTERISK-28852: Unprotected access to nochecksums variable, causes build failures | ||
Reporter: | Guido Falsi (madpilot) | Labels: | |
Date Opened: | 2020-04-26 05:55:26 | Date Closed: | 2020-04-28 13:06:54 |
Priority: | Major | Regression? | Yes |
Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
Versions: | 13.33.0 16.10.0 17.4.0 | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | FreeBSD ports system. | Attachments: | |
Description: | WHile testing the latest RCs on FreeBSD I encountered build failures. I noticed a recent commit, titled res_rtp_asterisk: Add 'rtp show settings' cli command, has added code accessing the nochecksums variable.
This variable is defined only when SO_NO_CHECK is defined, and this new access is unprotected by a check for this define. I'm going to provide a patch protecting such access with an ifdef. | ||
Comments: | By: Asterisk Team (asteriskteam) 2020-04-26 05:55:28.099-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-04-28 13:06:55.089-0500 Change 14325 merged by Joshua Colp: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14325|https://gerrit.asterisk.org/c/asterisk/+/14325] By: Friendly Automation (friendly-automation) 2020-04-28 13:39:25.509-0500 Change 14312 merged by Joshua Colp: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14312|https://gerrit.asterisk.org/c/asterisk/+/14312] By: Friendly Automation (friendly-automation) 2020-04-28 13:42:56.130-0500 Change 14313 merged by Friendly Automation: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14313|https://gerrit.asterisk.org/c/asterisk/+/14313] By: Friendly Automation (friendly-automation) 2020-04-28 13:57:36.446-0500 Change 14351 merged by Friendly Automation: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14351|https://gerrit.asterisk.org/c/asterisk/+/14351] By: Friendly Automation (friendly-automation) 2020-04-28 13:58:49.772-0500 Change 14314 merged by Benjamin Keith Ford: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14314|https://gerrit.asterisk.org/c/asterisk/+/14314] By: Friendly Automation (friendly-automation) 2020-04-28 13:58:58.247-0500 Change 14349 merged by Benjamin Keith Ford: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14349|https://gerrit.asterisk.org/c/asterisk/+/14349] By: Friendly Automation (friendly-automation) 2020-04-28 13:59:07.965-0500 Change 14350 merged by Benjamin Keith Ford: res_rtp_asterisk: Protect access to nochecksums with #ifdef [https://gerrit.asterisk.org/c/asterisk/+/14350|https://gerrit.asterisk.org/c/asterisk/+/14350] |